changed font size

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </blockquote>
     <h2>Common varieties</h2>
     <aside>
-      <ol>
+      <ol class="firstlist">
         <li>Albino</li>
         <li>Bull's Blood</li>
         <li>Chioggia</li>
