--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <header>
-    <h1>Beetroot <i>(Beta vulgaris)</i></h1>
+    <h1>Beetroot (<i>Beta vulgaris</i>)</h1>
     <nav>
       <ol>
         <li><a href="#">Common varieties</a></li>
